WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146718
[GTK] Layout test accessibility/aria-hidden-false-works-in-subtrees.html fails after
r184890
https://bugs.webkit.org/show_bug.cgi?id=146718
Summary
[GTK] Layout test accessibility/aria-hidden-false-works-in-subtrees.html fail...
Carlos Alberto Lopez Perez
Reported
2015-07-08 04:20:19 PDT
On platform GTK the test accessibility/aria-hidden-false-works-in-subtrees.html fails after
r184890
<
http://trac.webkit.org/r184890
> The diff is the following:
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r184890%20%288846%29/accessibility/aria-hidden-false-works-in-subtrees-pretty-diff.html
Attachments
Patch
(10.13 KB, patch)
2019-04-10 05:48 PDT
,
Carlos Garcia Campos
jdiggs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-07-08 04:20:52 PDT
<
rdar://problem/21722487
>
Carlos Garcia Campos
Comment 2
2019-04-10 05:48:02 PDT
Created
attachment 367115
[details]
Patch
Michael Catanzaro
Comment 3
2019-04-10 07:37:22 PDT
This looks like one for Joanie.
Joanmarie Diggs
Comment 4
2019-04-10 08:20:58 PDT
Comment on
attachment 367115
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=367115&action=review
> Source/WebCore/accessibility/atk/WebKitAccessible.cpp:1185 > + || role == AccessibilityRole::ApplicationGroup;
Fine. BUT this reminds me that we really should be implementing AtkText on most things with text (i.e. I'd think pretty much anything which is not a non-text widget). Not this bug, of course....
Joanmarie Diggs
Comment 5
2019-04-10 09:11:13 PDT
(In reply to Joanmarie Diggs (irc: joanie) from
comment #4
)
> Comment on
attachment 367115
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=367115&action=review
> > > Source/WebCore/accessibility/atk/WebKitAccessible.cpp:1185 > > + || role == AccessibilityRole::ApplicationGroup; > > Fine. BUT this reminds me that we really should be implementing AtkText on > most things with text (i.e. I'd think pretty much anything which is not a > non-text widget). Not this bug, of course....
Just filed
https://bugs.webkit.org/show_bug.cgi?id=196769
.
Carlos Garcia Campos
Comment 6
2019-04-11 01:25:43 PDT
Committed
r244187
: <
https://trac.webkit.org/changeset/244187
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug